# VideoStreamingOpenIGTLink

./: CMakeLists.txt  CMakeListsOpenH264.txt.in  CMakeListsOpenIGTLink.txt.in  README.md
VideoStreamReceiver/: CMakeLists.txt  H264Decoder.h  VideoStreamReceiver.cxx
VideoStreamServer/: CMakeLists.txt  VideoStreamServer.cxx
